--- a/index.html
+++ b/index.html
@@ -245,6 +245,23 @@ watchAdBtn.addEventListener("click", ()=>{
     }
   },1000);
 });
+
+// ------------- Fetch entegrasyonu ------------- //
+function sendKazimData() {
+  fetch("http://127.0.0.1:3000/update", {
+    method: "POST",
+    headers: { "Content-Type": "application/json" },
+    body: JSON.stringify({ kazimGucu, mevcutKazim })
+  })
+  .then(res => res.json())
+  .then(data => console.log("Backend'den gelen:", data))
+  .catch(err => console.error("Fetch hatası:", err));
+}
+
+// Her 5 saniyede bir backend'e veri gönder
+setInterval(() => {
+  if(gameStarted) sendKazimData();
+}, 5000);
 </script>
 </body>
 </html>
