--- a/index.html
+++ b/index.html
@@ -98,12 +98,10 @@ let totalSilverDestroyed = 0;
 
 let lastRedSpawnTime = 0;
 
-// Global taş hızı ve spawn interval
 let globalRockSpeed = 2;
 let baseSpawnInterval = 1500;
 let spawnInterval = baseSpawnInterval;
 
-// LocalStorage’dan önceki ilerlemeyi yükle
 if(localStorage.getItem("kazimGucu")){
   kazimGucu = parseFloat(localStorage.getItem("kazimGucu"));
 }
@@ -162,11 +160,7 @@ function update(){
   lastUpdate = now;
 
   mevcutKazim += kazimGucu*delta*0.01;
-
-  // Kazım gücüne bağlı global hız artışı
   globalRockSpeed = 2 + kazimGucu/5000; 
-
-  // Kazım gücüne bağlı spawn hızı
   spawnInterval = Math.max(500, baseSpawnInterval - kazimGucu/10); 
 
   if(now-lastSpawn > spawnInterval){ 
@@ -177,14 +171,12 @@ function update(){
   rocks.forEach(r=>r.update());
   rocks = rocks.filter(r=>r.y<canvas.height);
 
-  // Kırmızı taş spawn düzeltildi
   let redSpawnFrequency = kazimGucu < 1000 ? 15000 : kazimGucu < 2000 ? 10000 : 5000;
   if(now - lastRedSpawnTime > redSpawnFrequency){
     spawnRed();
     lastRedSpawnTime = now;
   }
 
-  // LocalStorage’a kaydet
   localStorage.setItem("kazimGucu", kazimGucu);
   localStorage.setItem("mevcutKazim", mevcutKazim);
 }
@@ -198,7 +190,6 @@ function draw(){
 
 function loop(){ update(); draw(); requestAnimationFrame(loop); }
 
-// TRX modal ve reklam sistemi
 const trxModalEl=document.getElementById("trxModal");
 const copyTrxBtn=document.getElementById("copyTrx");
 const trxContinueBtn=document.getElementById("trxContinueBtn");
@@ -246,9 +237,9 @@ watchAdBtn.addEventListener("click", ()=>{
   },1000);
 });
 
-// ------------- Fetch entegrasyonu ------------- //
+// ------------- Fetch entegrasyonu Render canlı backend'e ------------- //
 function sendKazimData() {
-  fetch("http://127.0.0.1:3000/update", {
+  fetch("https://mtrxgame-backend.onrender.com/update", {
     method: "POST",
     headers: { "Content-Type": "application/json" },
     body: JSON.stringify({ kazimGucu, mevcutKazim })
@@ -258,7 +249,6 @@ function sendKazimData() {
   .catch(err => console.error("Fetch hatası:", err));
 }
 
-// Her 5 saniyede bir backend'e veri gönder
 setInterval(() => {
   if(gameStarted) sendKazimData();
 }, 5000);
